--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,16 @@
             android:name=".MainActivity"
             android:exported="false"/>
 
+        <activity
+            android:name=".EventDetailActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".EditEventActivity"
+            android:exported="false" />
+
+
+
 
     </application>
 
